--- a/mbed_app.json
+++ b/mbed_app.json
@@ -14,10 +14,18 @@
             "macro_name": "MBED_CONF_NORDIC_LF_CLOCK_XTAL_ACCURACY"
         }
     },
+    "macros": [
+        "MBED_CONF_APP_MAIN_STACK_SIZE=6000"
+    ],
     "target_overrides": {
         "*": {
+            "cordio.desired-att-mtu": 50,
             "target.lf_clock_src": "NRF_LF_SRC_RC",
-            "lf_clock_xtal_accuracy": "NRF_CLOCK_LF_XTAL_ACCURACY_500_PPM"
+            "lf_clock_xtal_accuracy": "NRF_CLOCK_LF_XTAL_ACCURACY_500_PPM",
+            "target.components_add": ["FLASHIAP", "STORAGE"],
+            "target.device_has": ["FLASH"],
+            "storage.storage_type": "TDB_INTERNAL",
+            "target.restrict_size": "0x0FE000"
         }
     }
 }
